--- a/GetRide/frontend/src/components/Header/HeaderComp.module.css
+++ b/GetRide/frontend/src/components/Header/HeaderComp.module.css
@@ -1,32 +1,31 @@
 header {
   display: flex;
   align-items: center;
-  padding: 10px 100px;
+  padding: 32px 100px;
   justify-content: space-between;
   font-weight: 500;
   font-size: 22px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: #e88553;
-  height: 13vh;
-
-  /* background-color: #333333; */
+  /* color: #e88553; */
 }
 
-nav a {
+.navLink {
   color: #d0bead;
   padding: 10px;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
 }
 
-nav a.active {
+.activeNavLink {
   color: #e88553;
+  font-weight: bold;
 }
 
-.header--logo {
+.headerLogo {
   width: 150px;
   height: 90px;
 }
 
-.header--nav__buttons {
+.headerButtons {
   display: flex;
   gap: 20px;
 }
@@ -46,17 +45,17 @@ nav a.active {
     padding: 20px;
   }
 
-  nav a {
+  .navLink {
     margin: 0 20px;
   }
 
-  .header--nav__buttons {
+  .headerButtons {
     flex-direction: column;
     gap: 20px;
     margin-top: 10px;
   }
 
-  .header--logo {
+  .headerLogo {
     width: 120px;
     height: auto;
   }
@@ -67,7 +66,7 @@ nav a.active {
     padding: 20px 50px;
   }
 
-  .header--logo {
+  .headerLogo {
     width: 100px;
     height: 70px;
   }
@@ -80,8 +79,8 @@ nav a.active {
   }
 }
 
-/* @media (min-width: 1440px) {
+@media (min-width: 1440px) {
   header {
     padding: 40px 120px;
   }
-} */
+}
