--- a/GetRide/frontend/src/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/GetRide/frontend/src/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,4 +1,4 @@
-.language-switcher button {
+.languageButton {
   background: none;
   margin-top: 10px;
   border: none;
@@ -6,6 +6,7 @@
   padding: 5px;
   transition: transform 0.2s ease-in-out;
 }
-.language-switcher button:hover {
+
+.languageButton:hover {
   transform: scale(1.1);
 }
