--- a/GetRide/frontend/src/components/Modal/ModalCard.module.css
+++ b/GetRide/frontend/src/components/Modal/ModalCard.module.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+.modalOverlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -9,13 +9,12 @@
   align-items: center;
   justify-content: center;
   z-index: 1000;
-  padding: 10px;
 }
 
-.modal-content {
+.modalContent {
   background: rgb(37, 36, 36);
   padding: 20px;
-  border-radius: 8px;
+  border-radius: 10px;
   text-align: center;
   width: 90%;
   max-width: 500px;
@@ -24,12 +23,5 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-}
-
-.modal-content-button {
-  margin-top: 10px;
-  width: 100%;
-  max-width: 200px;
-  display: flex;
-  justify-content: center;
+  gap: 15px;
 }
