--- a/GetRide/frontend/src/pages/AboutUs/AboutUsPage.css
+++ b/GetRide/frontend/src/pages/AboutUs/AboutUsPage.css
@@ -10,26 +10,6 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.about-us-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 0 20px;
-  z-index: 2;
-}
-
-.about-us-overlay {
-  margin-top: 0;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
 h1,
 h2,
 h3 {
@@ -50,8 +30,28 @@ a {
   text-decoration: none;
 }
 
-.about-us-first,
-.contact-container,
+.aboutContainer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0 20px;
+  z-index: 2;
+  margin-bottom: 80px;
+}
+
+.aboutOverlay {
+  margin-top: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.aboutFirst,
 .our-future,
 .mission-section {
   display: grid;
@@ -65,7 +65,7 @@ a {
   gap: 130px;
 }
 
-.about-us-first p,
+.aboutFirst p,
 .join-movement p,
 .our-story p,
 .mission-section p {
@@ -74,7 +74,7 @@ a {
   line-height: 1.6;
 }
 
-.about-us-first p {
+.aboutFirst p {
   font-size: 20px;
 }
 
@@ -94,14 +94,6 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-.contact-container-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
 }
 
 .reasons {
@@ -125,63 +117,8 @@ a {
   margin-top: 80px;
 }
 
-.contact-container {
-  color: #d0bead;
-}
-
-.contact-container-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  gap: 15px;
-}
-
-.contact-container-info span {
-  font-size: 18px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-.contact-container-info img {
-  width: 35px;
-  height: 35px;
-  margin-top: 10px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.contact-container-info a:hover img {
-  transform: scale(1.1);
-}
-
-.contact-container-form-input {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.contact-container-form-input input,
-.contact-container-form-input textarea {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  padding: 12px;
-  border-radius: 8px;
-  border: 2px solid #e88553;
-  width: 600px;
-  background-color: transparent;
-  color: #d0bead;
-}
-
-.contact-container-form-input textarea {
-  resize: vertical;
-  min-height: 100px;
-}
-
 @media (max-width: 768px) {
-  .about-us-first,
-  .contact-container,
+  .aboutFirst,
   .our-future,
   .mission-section {
     grid-template-columns: 1fr;
@@ -192,10 +129,6 @@ a {
   .about-us-img,
   .mission-img {
     max-width: 90%;
-  }
-
-  .contact-container {
-    padding: 50px 50px;
   }
 
   .reasons {
@@ -214,29 +147,15 @@ a {
 }
 
 @media (max-width: 1024px) {
-  .about-us-first,
-  .contact-container,
+  .aboutFirst,
   .our-future,
   .mission-section {
     gap: 40px;
   }
-
-  .contact-container-info img {
-    width: 30px;
-    height: 30px;
-  }
-
-  .contact-container-form-input input,
-  .contact-container-form-input textarea {
-    font-size: 15px;
-    padding: 10px;
-    width: 100%;
-  }
 }
 
 @media (min-width: 1024px) {
-  .about-us-first,
-  .contact-container,
+  .aboutFirst,
   .our-future,
   .mission-section {
     max-width: 1700px;
@@ -245,16 +164,5 @@ a {
 
   .cta-button {
     justify-content: flex-start;
-  }
-
-  .contact-container-button {
-    justify-content: flex-end;
-  }
-
-  .contact-container-form-input input,
-  .contact-container-form-input textarea {
-    font-size: 15px;
-    padding: 10px;
-    width: auto;
   }
 }
