--- a/GetRide/frontend/src/pages/Home/HomePage.module.css
+++ b/GetRide/frontend/src/pages/Home/HomePage.module.css
@@ -20,3 +20,30 @@
 .steps div:nth-child(2n) {
   margin-top: 80px;
 }
+
+.postRideContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.postRideButton {
+  background-color: #fe8455;
+  color: rgb(226, 223, 223);
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  position: absolute;
+  top: 757px;
+  right: 1125px;
+  width: 300px;
+}
+
+.postRideButton:hover {
+  background: #c85e39;
+  color: white;
+  text-decoration: none;
+}
