--- a/GetRide/frontend/src/components/Input/Input.module.css
+++ b/GetRide/frontend/src/components/Input/Input.module.css
@@ -1,8 +1,8 @@
 .input {
-  width: 60%;
+  width: 250px;
   padding: 10px;
   border-radius: 9px;
-  font-size: 17px;
+  font-size: 16px;
   margin: 7px;
   background-color: #d0bead;
   color: #1a2b33;
