--- a/GetRide/frontend/src/components/LogPageComps/LogPage.module.css
+++ b/GetRide/frontend/src/components/LogPageComps/LogPage.module.css
@@ -1,22 +1,20 @@
 .log_page_wrap {
-    position:relative;
-    display: flex;
-    flex-direction: screen;
-    justify-content: center;
-    align-items: center;
-    width: 1440px;
-    height: 1024px;
-    background:  #1A2B33 74.83%;
-    color: black;
-  }
- */
+  position: absolute;
+  left: max(0px, calc((100vw - 1440px) / 2));
+  display: flex;
+  /* Correcting flex-direction: 'screen' is not valid; use row or column */
+  flex-direction: row; 
+  align-items: center;
+  max-width: 1440px;
+  width: 1440px;
+  height: 1024px;
+  background: #1A2B33;
+  color: black;
+}
 
- 
-  .bg-log-scene{
-    opacity: 60%;
-  }
+
   .log_page_info {
-    position: absolute;
+    position: relative;
     top: 0px;
     left: 0px;
     display: flex;
@@ -67,8 +65,8 @@
   .log_section {
     margin: 0;
     padding: 100px 100px 100px 150px;
-    position: absolute;
-    right: 0px;
+    position:relative;
+    right: -50px;
     top: 0px;
     width: 630px;
     height:824px;
