--- a/GetRide/frontend/src/pages/HowItWorks/HowItWorksPage.module.css
+++ b/GetRide/frontend/src/pages/HowItWorks/HowItWorksPage.module.css
@@ -1,53 +1,55 @@
 .container {
-    padding: 20px;
-    font-family: Arial, sans-serif;
-    background-color: #2a2a2a;
-    color: white;
-  }
-  
-  .container h1 {
-    text-align: center;
-    font-size: 32px;
-    color: #f57c00;
-  }
-  
-  .section {
-    margin: 20px 0;
-  }
-  
-  .section h2 {
-    font-size: 24px;
-    color: #f57c00;
-    cursor: pointer;
-    transition: color 0.3s ease;
-  }
-  
-  .section h2:hover {
-    color: #ff9800;
-  }
-  
-  .sectionContent {
-    padding-left: 20px;
-    margin-top: 10px;
-    
-  }
-  
-  .sectionContent img {
-    width: 100%;
-    max-width: 500px;
-    margin: 10px 0;
-  }
-  
-  section p {
-    font-size: 16px;
-    line-height: 1.6;
-  }
-  
-  section ul {
-    list-style-type: disc;
-    margin-left: 20px;
-  }
-  
-  section ul li {
-    margin-bottom: 5px;
-  }
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: #2a2a2a;
+  color: white;
+}
+
+.container h1 {
+  text-align: center;
+  font-size: 32px;
+  color: #f57c00;
+}
+
+.section {
+  margin: 20px 0;
+}
+
+.section h2 {
+  font-size: 24px;
+  color: #f57c00;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.section h2:hover {
+  color: #ff9800;
+}
+
+.section li {
+  list-style: none;
+}
+.sectionContent {
+  padding-left: 20px;
+  margin-top: 10px;
+}
+
+.sectionContent img {
+  width: 100%;
+  max-width: 500px;
+  margin: 10px 0;
+}
+
+section p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+section ul {
+  list-style-type: disc;
+  margin-left: 20px;
+}
+
+section ul li {
+  margin-bottom: 5px;
+}
